<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwEng2013QuizApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="show_random_question">Show a random question.</string>
    <string name="submit_quiz">Submit a quiz question.</string>
    <string name="title_activity_show_questions">ShowQuestionsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_answer">ShowAnswer</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="hint_question_text">Type in the question\'s text body</string>
    <string name="button_add_answer">+</string>
    <string name="edit_tags">Type in the question\'s tags</string>
    <string name="button_submit_question">Submit</string>
    <string name="edit_answer_text">Type in the answer</string>
    <string name="button_cross">\u2718</string>
    <string name="button_check">\u2714</string>
    <string name="button_remove">-</string>
    <string name="successful_submit">Successful submit</string>
    <string name="error_server_comm">Server is unreachable.</string>
    <string name="error_failure">Failure</string>
    <string name="nothing_in_cache">Nothing in cache</string>
    <string name="next_question">Next question</string>
    <string name="fetch_server_failure">There was an error retrieving the question, switched to offline mode.</string>
    <string name="submit_server_failure">Could not upload the question to the server, switched to offline mode.</string>
    <string name="log_button">Log in using Tequila</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="log_out">Log out</string>
    <string name="username">GASPAR Username</string>
    <string name="password">GASPAR Password</string>
    <string name="offline_mode">Offline mode</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hint_search_query">Type in the search query</string>
	<string name="search_button_text">Search</string>
	<string name="client_error">An error occurred on the client side.</string>
</resources>
